# fastapi-chat

./: Dockerfile  Makefile  README.md  pyproject.toml
app/application/api/: main.py
docker_compose/: app.yaml
