[tool.poetry]
name = "fastapi-chat"
version = "0.1.0"
description = ""
authors = ["HerdaSinama <ya.zabil@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
motor = "^3.6.0"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
